<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ui">零代码 UI 测试</string>
    <string name="local">本地列表</string>
    <string name="remote">共享列表</string>
    <string name="record">录制</string>
    <string name="replay">回放</string>
    <string name="recording">录制中</string>
    <string name="replaying">回放中</string>
    <string name="name">名称：</string>
    <string name="please_firstly_record_or_replay">请先录制或回放</string>
    <string name="finished_because_of_no_step">没有操作步骤，已结束</string>
    <string name="replay_finished">回放结束</string>
    <string name="remains_step_needs_uploading">还有没上传完的步骤！</string>
    <string name="admin">管理</string>
    <string name="click_ball_to_finish">点分割球来完成</string>
    <string name="long_press_ball_to_finish">长按分割球来完成</string>
    <string name="center">居中</string>
    <string name="ratio">等比</string>
    <string name="top">靠上</string>
    <string name="bottom">靠下</string>
    <string name="left">靠左</string>
    <string name="right">靠右</string>
    <string name="top_left">靠左上</string>
    <string name="top_right">靠右上</string>
    <string name="bottom_left">靠左下</string>
    <string name="bottom_right">靠右下</string>
    <string name="ratio_left">靠左、垂直等比</string>
    <string name="ratio_right">靠右、垂直等比</string>
    <string name="ratio_top">靠上、水平等比</string>
    <string name="ratio_bottom">靠下、水平等比</string>
    <string name="unselected_touch_scope">已取消选择触摸区域</string>
    <string name="selected_touch_scope_long_press_to_unselect">已选中触摸区域，长按来取消选择</string>
    <string name="click_sharp_to_double_ball_click_dollar_to_go_settings">点 # 来翻倍分割球，点 $ 跳转设置页</string>
    <string name="no_more">没有更多了</string>
    <string name="already_loaded_all">已加载完全部</string>
    <string name="pls_input_name_here">请输入名称</string>
    <string name="temp_flow">操作流程</string>
    <string name="confirm_delete">确定要删除吗？</string>
    <string name="yes">确定</string>
    <string name="pls_select_usable_item">请选择可用的项</string>
    <string name="delete_succeed">删除成功</string>
    <string name="delete_failed">删除失败，请检查网络后重试</string>
    <string name="no">取消</string>
    <string name="proxy_">代理：</string>
    <string name="account_">账号：</string>
    <string name="password_">密码：</string>
    <string name="sign_in">登录</string>
    <string name="sign_out">登出</string>
    <string name="sign_up">注册</string>
</resources>
